<resources>
    <string name="app_name">LOANer</string>
    <string name="welcome">Welcome Telmo</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="requestLoan">Request a Loan</string>
    <string name="loanPayment">Loan Payment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="manageAccount">Manage your account</string>
    <string name="checkMov">Check Movements</string>
    <string name="total_money">You have 0.0 €</string>
    <string-array name="loaner_IP">
        <item>192.168.1.100</item>
        <item>193.137.5.238</item>
    </string-array>
</resources>
